quick fixed content alignment (left)

--- a/assets/scss/templates/overview.scss
+++ b/assets/scss/templates/overview.scss
@@ -13,23 +13,45 @@
 // .col-lg-3 {
 // background: green;
 // }
+//
 
-ul#overview-list {
+main {
+  overflow-x: hidden;
+}
+
+.col-11 {
+  // background-color: red;
+}
+
+.overview-container {
+    margin: 0 auto;
+    margin-left: 24px;
+    // margin-left: 4rem;
+    // margin-right: 4rem;
+    display: flex;
+    justify-content: center;
+}
+
+ul {
+  // background: grey;
+  width:90%;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 6rem;
-  padding: 0rem;
-  align-content: center;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: 4rem;
+  padding-inline-start: 0px;
+  padding-inline-end: 0px;
+  // margin-left: 100px;
 
   li {
-    // list-style-type: none;
+    // background: aqua;
+    // margin: 10px 48px;
+    // margin-left: 0rem;
+    margin-right: 110px;
     display: inline-block;
     flex-wrap: wrap;
-    margin-left: 2rem;
-    margin-right: 2rem;
     width: 25%;
-
     a {
       padding: none;
       // transition: all 0.6s ease-in-out 0s;
@@ -48,7 +70,7 @@ ul#overview-list {
 
     .overview-caption {
       padding-top: 12px;
-      padding-bottom: 50px;
+      padding-bottom: 30px;
       max-width: 500px;
     }
 
@@ -237,6 +259,8 @@ hr {
 //         }
 //     }
 // }
+
+// ------
 
 @media only screen and (max-width: 1440px) {
 
